--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     Nosso foco é ir além das expectativas, atender com excelência, dar comodidade e praticidade a vida das pessoas com ótimos resultados!
 
                 </p>
+                <div class="container">
+                    <h2>Principais marcas que trabalhamos</h2>
+                </div>
                 <ul class="brands-list">
                     <li><img src="./imagem/Logo_adaptogen-01.webp" alt="Adaptogen"/> </li>
                     <li><img src="./imagem/atlheticaNutritiongde.png" alt="Athetica"/> </li>
